--- a/loan_app/templates/index.html
+++ b/loan_app/templates/index.html
@@ -109,7 +109,7 @@
               <input type="number" class="form-control" id="Loan_Amount_Term"> <!-- placeholder="name@example.com" -->
             </div>
             <div class="form-group">
-              <label for="Credit_History"> Credit History</label>
+              <label for="Credit_History"> Is your credit score over 640? </label>
               <select class="form-control" id="Credit_History">
                 <option value="1">Yes</option>
                 <option value="0">No</option>
