d3 plus is necessary for the POST is index.js

--- a/loan_app/templates/index.html
+++ b/loan_app/templates/index.html
@@ -8,6 +8,7 @@
     <title>Mortgage Masters</title>
     <script src="https://code.jquery.com/jquery-2.1.0.min.js"></script>
     <script src="https://d3js.org/d3.v5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3plus/1.9.8/d3plus.full.js"></script>
     <!-- Leaflet CSS & JS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.2/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet@1.0.2/dist/leaflet.js"></script>
