--- a/loan_app/templates/index.html
+++ b/loan_app/templates/index.html
@@ -7,8 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mortgage Masters</title>
     <script src="https://code.jquery.com/jquery-2.1.0.min.js"></script>
-    <script src="https://d3js.org/d3.v5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3plus/1.9.8/d3plus.full.js" defer="defer"></script>
+    <script src="https://d3js.org/d3.v5.js"></script>\
     <!-- Leaflet CSS & JS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.2/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet@1.0.2/dist/leaflet.js"></script>
@@ -130,6 +129,7 @@
     <br />
     <hr>
     <script src="/static/js/index.js" type="text/javascript"></script>
+    <script src="/static/js/d3plus.js" type="text/javascript" defer="defer"></script>
 </body>
 
 </html>
