--- a/loan_app/templates/index.html
+++ b/loan_app/templates/index.html
@@ -129,7 +129,7 @@
     <br />
     <hr>
     <script src="/static/js/index.js" type="text/javascript"></script>
-    <script src="/static/js/d3plus.js" type="text/javascript" defer="defer"></script>
+    <script src="/static/js/d3plus.js" type="text/javascript"></script>
 </body>
 
 </html>
