updated index layout

--- a/loan_app/templates/index.html
+++ b/loan_app/templates/index.html
@@ -43,25 +43,12 @@
         </div>
       </div>
     </nav>
-
-    <div class="container">
-        <div class="jumbotron text-center">
-            <h1>
-                <strong> Mortgage Masters </strong>
-                <hr>
-            </h1>
-            <p style="font-weight: normal">
-                Something about the project. Something about the project. Something about the project. Something about the project.
-                Something about the project. Something about the project. Something about the project. Something about the project.
-                Something about the project. Something about the project. Something about the project. Something about the project.
-                Something about the project. Something about the project. Something about the project. Something about the project.
-                Something about the project. Something about the project. Something about the project. Something about the project.
-            </p>
-        </div>
+    <div class="page-header">
+      <h1>Mortgage Masters <small>Subtext for header</small></h1>
     </div>
     <br />
     <div class="container">
-      <div class="well">
+      <div class="jumbotron">
         <div class="row">
           <div class="column col-sm-12 col-md-3">
             <form id="mortgage-form">
