--- a/loan_app/templates/index.html
+++ b/loan_app/templates/index.html
@@ -43,10 +43,20 @@
         </div>
       </div>
     </nav>
-    <div class="page-header">
-      <h1>Mortgage Masters <small>Subtext for header</small></h1>
-    </div>
-    <br />
+    <div class="row">
+      <div class="page-header">
+        <h1>Mortgage Masters <small>Subtext for header</small></h1>
+      </div>
+      <hr>
+      <br />
+      <p>
+        Something about the project. Something about the project. Something about the project.
+        Something about the project. Something about the project. Something about the project.
+        Something about the project. Something about the project. Something about the project. Something about the project. Something about the project. Something about the project. Something about the project. Something about the project. Something about the project. Something about the project. Something about the project. Something about the project. Something about the project. Something about the project.
+      </p>
+      <hr>
+      <br />
+
     <div class="container">
       <div class="jumbotron">
         <div class="row">
