updated some random formatting and app.py syntax

--- a/loan_app/templates/index.html
+++ b/loan_app/templates/index.html
@@ -45,7 +45,9 @@
     </nav>
     <div class="row">
       <div class="page-header">
-        <h1>Mortgage Masters <small>Subtext for header</small></h1>
+        <div class="column col-xs-12">
+          <h1 align="center"> Mortgage Masters </h1>
+        </div>
       </div>
       <hr>
       <br />
@@ -135,7 +137,9 @@
         </div>
       </div> <!-- end input well -->
       <div class="row">
-        <h1 id="model-classificaion"> Enter your data and hit submit </h1>
+        <div class="column col-xs-12">
+          <h2 id="model-classificaion"> Enter your data and hit submit </h2>
+        </div>
       </div>
     </div>
     <br />
