first integration of inito theme

--- a/loan_app/templates/index.html
+++ b/loan_app/templates/index.html
@@ -9,11 +9,9 @@
     <script src="https://code.jquery.com/jquery-2.1.0.min.js"></script>
     <script src="https://d3js.org/d3.v5.js"></script>\
     <!-- Leaflet CSS & JS -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.2/dist/leaflet.css" />
     <link rel="stylesheet" href="static/css/basic_style.css">
     <script src="/static/js/index.js" type="text/javascript"></script>
     <script src="https://unpkg.com/leaflet@1.0.2/dist/leaflet.js"></script>
-
     <link href="https://maxcdn.bootstrapcdn.com/bootswatch/4.0.0-beta.3/sandstone/bootstrap.min.css" rel="stylesheet" integrity="sha384-XNRTCesHENaXoVVjLx3Vm0rmwmS4W2g5w0xwZQIDPDvT4IDa/HRIvwb8CoH7/JPW"
         crossorigin="anonymous">
 
@@ -43,22 +41,22 @@
         </div>
       </div>
     </nav>
-    <div class="row">
-      <div class="page-header">
-        <div class="column col-xs-12">
-          <h1 align="center"> Mortgage Masters </h1>
-        </div>
+    <div class="row page-header">
+      <div class="column col-xs-12">
+        <h1 align="center"> Mortgage Masters </h1>
       </div>
       <hr>
       <br />
       <p>
-        Something about the project. Something about the project. Something about the project.
-        Something about the project. Something about the project. Something about the project.
-        Something about the project. Something about the project. Something about the project. Something about the project. Something about the project. Something about the project. Something about the project. Something about the project. Something about the project. Something about the project. Something about the project. Something about the project. Something about the project. Something about the project.
+        Dream Housing Finance company deals in all home loans. They have presence
+        across all urban, semi urban and rural areas. Customer first apply for
+        home loan, after that company validates the customer eligibility for loan.
+        <br />
+        The company wants to automate the loan eligibility process (real time)
+        based on customer detail provided while filling online application form.
       </p>
       <hr>
       <br />
-
     <div class="container">
       <div class="jumbotron">
         <div class="row">
