added header, updated formatting, moved from /inito to /

--- a/loan_app/static/css/inito_styles.css
+++ b/loan_app/static/css/inito_styles.css
@@ -225,7 +225,7 @@ a:hover {
 
 **********************************************************************/
 #head {
-  background: #f4f4f4 url(../images/bg_head.jpg) top center;
+  background: #f4f4f4 url(../images/mortgage_header.jpg) top center;
   background-size: cover;
   color: #7C7C7C;
   padding: 30px 0 35px 0;
@@ -252,7 +252,7 @@ a:hover {
   font-size: 14px;
   font-size: 0.875rem;
   line-height: 1.2em;
-  color: #7C7C7C;
+  color: #474747;
   margin: 5px 0 0;
 }
 #head .tagline b {
