--- a/loan_app/templates/inito_index.html
+++ b/loan_app/templates/inito_index.html
@@ -159,7 +159,7 @@
 
 		<div class="row section recentworks topspace">
 
-			<h2 class="section-title"><span>Recent Works</span></h2>
+			<h2 class="section-title"><span>Training Data Analysis</span></h2>
 
 			<div class="thumbnails recentworks row">
 
@@ -286,72 +286,30 @@
 
 </main>
 
-<footer id="footer">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-3 widget">
-				<h3 class="widget-title">Contact</h3>
-				<div class="widget-body">
-					<p>+234 23 9873237<br>
-						<a href="mailto:#">some.email@somewhere.com</a><br>
-						<br>
-						234 Hidden Pond Road, Ashland City, TN 37015
-					</p>
-				</div>
-			</div>
-
-			<div class="col-md-3 widget">
-				<h3 class="widget-title">Follow me</h3>
-				<div class="widget-body">
-					<p class="follow-me-icons">
-						<a href=""><i class="fa fa-twitter fa-2"></i></a>
-						<a href=""><i class="fa fa-dribbble fa-2"></i></a>
-						<a href=""><i class="fa fa-github fa-2"></i></a>
-						<a href=""><i class="fa fa-facebook fa-2"></i></a>
-					</p>
-				</div>
-			</div>
-
-			<div class="col-md-3 widget">
-				<h3 class="widget-title">Text widget</h3>
-				<div class="widget-body">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, nihil natus explicabo ipsum quia iste aliquid repellat eveniet velit ipsa sunt libero sed aperiam id soluta officia asperiores adipisci maxime!</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, nihil natus explicabo ipsum quia iste aliquid repellat eveniet velit ipsa sunt libero sed aperiam id soluta officia asperiores adipisci maxime!</p>
-				</div>
-			</div>
-
-			<div class="col-md-3 widget">
-				<h3 class="widget-title">Form widget</h3>
-				<div class="widget-body">
-					<p>+234 23 9873237<br>
-						<a href="mailto:#">some.email@somewhere.com</a><br>
-						<br>
-						234 Hidden Pond Road, Ashland City, TN 37015
-					</p>
-				</div>
-			</div>
-
-		</div> <!-- /row of widgets -->
-	</div>
-</footer>
 
 <footer id="underfooter">
 	<div class="container">
 		<div class="row">
 
+
 			<div class="col-md-6 widget">
 				<div class="widget-body">
-					<p>234 Hidden Pond Road, Ashland City, TN 37015 </p>
+					<p>
+						<b>University of Texas at Austin</b><br>
+						Data Analytics and Visualization Program
+					</p>
+
 				</div>
 			</div>
 
 			<div class="col-md-6 widget">
 				<div class="widget-body">
 					<p class="text-right">
-						Copyright &copy; 2014, Your awesome name here<br>
-						Design: <a href="http://www.gettemplate.com" rel="designer">Initio by GetTemplate</a> </p>
+						Design: <a href="http://www.gettemplate.com" rel="designer">Initio by GetTemplate</a>
+					</p>
 				</div>
 			</div>
+
 
 		</div> <!-- /row of widgets -->
 	</div>
