--- a/loan_app/templates/index.html
+++ b/loan_app/templates/index.html
@@ -253,7 +253,7 @@
 				</div>
 				<div class="col-lg-4 text-right">
 					<a href="https://public.tableau.com/profile/bharathy7744#!/vizhome/MortgageMasters/MortgageMasters " target="_blank" class="btn btn-primary btn-lg">
-						See more chart
+						See more charts
 					</a>
 				</div>
 			</div></div>
@@ -323,5 +323,6 @@
 <script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3plus/1.9.8/d3plus.full.js"></script>
 <script src="static/js/inito_template.js"></script>
+<script src="static/js/index.js"></script>
 </body>
 </html>
