--- a/loan_app/templates/index.html
+++ b/loan_app/templates/index.html
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alice|Open+Sans:400,300,700">
 	<!-- Custom styles -->
 	<link rel="stylesheet" href="static/css/inito_styles.css">
+  <link rel="stylesheet" href="static/css/basic_style.css">
 
 
 	<!--[if lt IE 9]> <script src="static/js/inito_html5shiv.js"></script> <![endif]-->
@@ -23,7 +24,7 @@
 		<h1 id="logo" class="text-center">
 			<img class="img-circle" src="static/images/loan_icon.jpg" alt="">
 			<span class="title">Mortgage Masters</span>
-			<span class="tagline">Predicting Loan Grades with Neural Network:<br>
+			<span class="tagline">Predicting Loan Grades with a Neural Network:<br>
 				<p>A Machine Learning Pipeline</p></span>
 		</h1>
 	</div>
@@ -38,8 +39,8 @@
 			<div class="navbar-collapse collapse">
 
 				<ul class="nav navbar-nav">
-					<li class="active"><a href="inito">Home</a></li>
-					<li><a href="data"></a>Data</li>
+					<li class="active"><a href="#">Home</a></li>
+					<li><a href="data"><a href="data">Data</a></li>
 				</ul>
 
 			</div><!--/.nav-collapse -->
@@ -142,10 +143,10 @@
 	                </select>
 	              </div>
 							</div>
-							<div class="column col-sm-12 col-md-4">
+							<div class="column col-sm-12 col-md-2">
 							</div>
-							<div class="column col-sm-12 col-md-4">
-	              <button type="button" id="mortgage-submit" class="btn btn-primary">Submit</button>
+							<div class="column col-sm-12 col-md-6" id="submit-col">
+	              <button type="button" id="mortgage-submit" class="btn btn-primary"><b>Get your results</b></button>
 	            </div>
 						</div>
 	        </form>
@@ -248,7 +249,7 @@
 		<div class="row section topspace">
 			<div class="panel panel-cta"><div class="panel-body">
 				<div class="col-lg-8">
-					<p> An entire analysis of the data was performed in Tableau. <br />
+					<p> An full analysis of the training data was performed using Tableau. <br />
 						Click the button on the right for an interactive look at these charts and more! </p>
 				</div>
 				<div class="col-lg-4 text-right">
@@ -265,21 +266,51 @@
 				<h4>
 					Bharathy Natarajan
 				</h4>
+        <p>
+          <b> Connect: </b> <br />
+          <a href="https://www.linkedin.com/in/bharathynatarajan/" target="_blank">
+            LinkedIn
+          </a>
+        </p>
 			</div>
 			<div class="col-lg-3">
 				<h4>
 					Mark Groner
 				</h4>
+        <p>
+          <b> Connect: </b> <br />
+          <a href="https://www.linkedin.com/in/mark-groner/" target="_blank">
+            LinkedIn
+          </a> <br />
+          <a href="https://github.com/markgroner" target="_blank">
+            GitHub
+          </a>
+        </p>
 			</div>
 			<div class="col-lg-3">
 				<h4>
 					Prakash Tendolkar
 				</h4>
+        <p>
+          <b> Connect: </b> <br />
+          <a href="https://www.linkedin.com/in/prakashtendolkar/" target="_blank">
+            LinkedIn
+          </a>
+        </p>
 			</div>
 			<div class="col-lg-3">
 				<h4>
 					David Jones
 				</h4>
+        <p>
+          <b> Connect: </b> <br />
+          <a href="https://www.linkedin.com/in/david-w-jones-atx/" target="_blank">
+            LinkedIn
+          </a> <br />
+          <a href="https://github.com/davidwjones" target="_blank">
+            GitHub
+          </a>
+        </p>
 			</div>
 		</div> <!-- /section -->
 
