--- a/loan_app/templates/index.html
+++ b/loan_app/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-	<link rel="shortcut icon" href="static/images/loan_favicon.jpg">
+	<link rel="shortcut icon" href="static/images/loan_icon.jpg">
 
 	<!-- Bootstrap -->
 	<link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.no-icons.min.css" rel="stylesheet">
@@ -152,9 +152,16 @@
 	        </form>
 	      </div>
 	      <div class="row">
-	        <div class="column col-xs-12">
-	          <h2 id="model-classificaion"> Enter your data and hit submit </h2>
-	        </div>
+          <div class="column col-sm-12 col-md-2">
+          </div>
+	        <div class="column col-sm-12 col-md-2">
+            <img class="img-circle" id="model-classificaion-img" src="static/images/submit.png" alt="" width="125px">
+          </div>
+          <div class="column col-sm-12 col-md-6">
+            <h4 id="model-classificaion-text"> Use the form appove to submit your data </h4>
+          </div>
+          <div class="column col-sm-12 col-md-2">
+          </div>
 	      </div>
 	    </div>
 		</div> <!-- / section -->
@@ -270,6 +277,9 @@
           <b> Connect: </b> <br />
           <a href="https://www.linkedin.com/in/bharathynatarajan/" target="_blank">
             LinkedIn
+          </a> <br />
+          <a href="https://github.com/bharnats" target="_blank">
+            GitHub
           </a>
         </p>
 			</div>
@@ -337,7 +347,7 @@
 			<div class="col-md-6 widget">
 				<div class="widget-body">
 					<p class="text-right">
-						Design: <a href="http://www.gettemplate.com" rel="designer">Initio by GetTemplate</a>
+						Design: <a href="http://www.gettemplate.com" rel="designer" target="_blank">Initio by GetTemplate</a>
 					</p>
 				</div>
 			</div>
