--- a/loan_app/templates/index.html
+++ b/loan_app/templates/index.html
@@ -184,26 +184,23 @@
       <div class="row">
 
 				<div class="col-sm-12 col-md-4">
-          <img src="static/images/s1.jpg" alt="">
+          <img src="static/images/applicants_v_property_type.png" alt="" width="250px">
         </div>
         <div class="col-sm-12 col-md-8 analysis-text">
           <p>
-            Text above image to the left. Text above image to the left. Text above image to the left.
-            Text above image to the left. Text above image to the left. Text above image to the left.
-            Text above image to the left. Text above image to the left. Text above image to the left.
+            Majority of the Loans are requested for Semi-urban property types.
         </div>
       </div>
       <hr>
       <div class="row">
 
-        <div class="col-sm-12 col-md-8 analysis-text">
+        <div class="col-sm-12 col-md-6 analysis-text">
           <p>
-            Text above image to the right. Text above image to the right. Text above image to the right.
-            Text above image to the right. Text above image to the right. Text above image to the right.
-            Text above image to the right. Text above image to the right. Text above image to the right.
+            The average loan amount requested is roughly 120 K for an average loan-amount term of 360 months
         </div>
-        <div class="col-sm-12 col-md-4">
-          <img src="static/images/s1.jpg" alt="">
+        <div class="col-sm-12 col-md-6">
+          <img src="static/images/LA_Amount.png" alt="">
+          <img src="static/images/LA_term.png" alt="">
         </div>
       </div>
 		</div> <!-- /section -->
