--- a/loan_app/templates/index.html
+++ b/loan_app/templates/index.html
@@ -20,7 +20,7 @@
 <body class="home">
 
 <header id="header">
-	<div id="head" class="parallax" parallax-speed="2">
+	<div id="head" class="parallax mortage-head" parallax-speed="2">
 		<h1 id="logo" class="text-center">
 			<img class="img-circle" src="static/images/loan_icon.jpg" alt="">
 			<span class="title">Mortgage Masters</span>
@@ -183,10 +183,10 @@
 
       <div class="row">
 
-				<div class="col-sm-12 col-md-5">
+				<div class="col-sm-12 col-md-4">
           <img src="static/images/Property_Area.png" alt="" width="250px">
         </div>
-        <div class="col-sm-12 col-md-7 analysis-text">
+        <div class="col-sm-12 col-md-8 analysis-text">
           <p>
             Majority of the Loans are requested for Semi-urban property types.
         </div>
