--- a/loan_app/templates/index.html
+++ b/loan_app/templates/index.html
@@ -257,6 +257,9 @@
           <b> Connect: </b> <br />
           <a href="https://www.linkedin.com/in/prakashtendolkar/" target="_blank">
             LinkedIn
+          </a> <br />
+          <a href="https://github.com/ptendolkar1" target="_blank">
+            GitHub
           </a>
         </p>
 			</div>
