minimal text updates

--- a/loan_app/templates/data.html
+++ b/loan_app/templates/data.html
@@ -25,7 +25,7 @@
 			<img class="img-circle" src="static/images/data_icon.png" alt="">
 			<span class="title">About the Data</span>
 			<span class="tagline">Diving Into the Data Used to Train the Model:<br>
-				<p>Definitions and Tables</p></span>
+				<p>Glossary and Tables</p></span>
 		</h1>
 	</div>
 
