--- a/loan_app/templates/index.html
+++ b/loan_app/templates/index.html
@@ -90,7 +90,7 @@
 	                </select>
 	              </div>
 	              <div class="form-group">
-	                <label for="Education"> College Degreee</label>
+	                <label for="Education"> College Degree</label>
 	                <select class="form-control" id="Education">
 	                  <option value="1">Yes</option>
 	                  <option value="0">No</option>
