updated language on submit and resubmit

--- a/loan_app/templates/index.html
+++ b/loan_app/templates/index.html
@@ -157,7 +157,7 @@
 							<div class="column col-sm-12 col-md-2">
 							</div>
 							<div class="column col-sm-12 col-md-6" id="submit-col">
-	              <button type="button" id="mortgage-submit" class="btn btn-primary"><b>Get your results</b></button>
+	              <button type="button" id="mortgage-submit" class="btn btn-primary"><b>Submit Loan Application</b></button>
 	            </div>
 						</div>
 	        </form>
