updated header for form

--- a/loan_app/templates/index.html
+++ b/loan_app/templates/index.html
@@ -67,7 +67,7 @@
 		</div> <!-- / section -->
 
 		<div class="row section featured topspace">
-			<h2 class="section-title"><span>Try it out</span></h2>
+			<h2 class="section-title"><span>Enter Your Information</span></h2>
 			<div class="container">
 	      <div class="jumbotron">
 	        <div class="row">
