renders one table on data route when loaded

--- a/loan_app/templates/data.html
+++ b/loan_app/templates/data.html
@@ -50,9 +50,27 @@
       <p> Glossary Placeholder </p>
     </div>
     <hr>
-    <table>
-
-    </table>
+		<div class="col-md-12">
+      <table class="table table-striped table-bordered table-hover">
+        <thead>
+          <tr>
+						<th>Married</th>
+						<th>Dependents</th>
+						<th>Education</th>
+						<th>Self Employed</th>
+						<th>Applicant Income</th>
+						<th>Coapplicant Income</th>
+						<th>LoanAmount</th>
+						<th>Loan Amount Term</th>
+						<th>Credit History</th>
+						<th>Property Area</th>
+						<th>Loan Status</th>
+          </tr>
+        </thead>
+        <tbody>
+      	</tbody>
+      </table>
+    </div>
 		<div class="row section clients topspace">
 			<h2 class="section-title"><span>Contributors</span></h2>
 			<div class="col-lg-3">
@@ -153,6 +171,6 @@
 <script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3plus/1.9.8/d3plus.full.js"></script>
 <script src="static/js/inito_template.js"></script>
-<script src="static/js/index.js"></script>
+<script src="static/js/data.js"></script>
 </body>
 </html>
