--- a/loan_app/templates/data.html
+++ b/loan_app/templates/data.html
@@ -51,6 +51,16 @@
     </div>
     <hr>
 		<div class="col-md-12">
+			<div class="row">
+				<div class="col-sm-12 col-md-1">
+				</div>
+				<div class="col-sm-12 col-md-11">
+					<h4><b> Choose a dataset: </b></h4>
+					<button type="button" id="trainDataButton" class="btn btn-primary"><b>Raw Data</b></button>
+					<button type="button" id="cleanDataButton" class="btn btn-primary"><b>Clean Data</b></button>
+				</div>
+			</div>
+
       <table class="table table-striped table-bordered table-hover">
         <thead>
           <tr>
