updated data page with glossary and added stylized headers

--- a/loan_app/templates/data.html
+++ b/loan_app/templates/data.html
@@ -46,16 +46,26 @@
 
 <main id="main">
 	<div class="container">
-    <div class="row glossary">
-      <p> Glossary Placeholder </p>
-    </div>
-    <hr>
+		<h2 class="section-title"><span>Glossary</span></h2>
+		<ul class="glossary">
+			<li><b>Married</b> - Marital status of the individual applicant</li>
+			<li><b>Dependents</b> - Applicant's number of legal dependents</li>
+			<li><b>Education</b> - Signifies whether the applicant has earned a college degree</li>
+			<li><b>Self Employed</b> - Applicant works for independently rather than an employer</li>
+			<li><b>Applicant Income</b> - Applicant's monthly income</li>
+			<li><b>Coapplicant Income</b> - Coapplicant's monthly income (if applicable)</li>
+			<li><b>Loan Amount</b> - The principal of the loan (in $ thousands)</li>
+			<li><b>Loan Amount Term</b> - The number of terms (in months)</li>
+			<li><b>Credit History</b> - Signifies whether the applicant has a credit score above 640</li>
+			<li><b>Property Area</b> - The development level of the area the applicant plans to purchase</li>
+			<li><b>Loan Status</b> - Signifies whether the loan was approved or denied</li>
+    </ul>
+    <h2 class="section-title"><span>Choose a dataset</span></h2>
 		<div class="col-md-12">
 			<div class="row">
 				<div class="col-sm-12 col-md-1">
 				</div>
 				<div class="col-sm-12 col-md-11">
-					<h4><b> Choose a dataset: </b></h4>
 					<button type="button" id="trainDataButton" class="btn btn-primary"><b>Raw Data</b></button>
 					<button type="button" id="cleanDataButton" class="btn btn-primary"><b>Clean Data</b></button>
 				</div>
@@ -70,7 +80,7 @@
 						<th>Self Employed</th>
 						<th>Applicant Income</th>
 						<th>Coapplicant Income</th>
-						<th>LoanAmount</th>
+						<th>Loan Amount</th>
 						<th>Loan Amount Term</th>
 						<th>Credit History</th>
 						<th>Property Area</th>
