updated write-ups for graphs

--- a/loan_app/templates/index.html
+++ b/loan_app/templates/index.html
@@ -187,16 +187,29 @@
           <img src="static/images/Property_Area.png" alt="" width="250px">
         </div>
         <div class="col-sm-12 col-md-8 analysis-text">
-          <p>
-            Majority of the Loans are requested for Semi-urban property types.
+          <p class="lead">
+            According to the graph on the left, more loans are submitted for semiurban properties than urban or rural.
+						However, semiurban loan applications are denied at a lower rate than
+						the other two categories.  This relationship is likely due to the fact
+						that individuals living in the suburbs are trypically older and more
+						likely to have established careers and/or spouses with a second income.
+					</p>
         </div>
       </div>
       <hr>
       <div class="row">
 
         <div class="col-sm-12 col-md-6 analysis-text">
-          <p>
-            The average loan amount requested is roughly 120 K for an average loan-amount term of 360 months
+          <p class="lead">
+						Most loan applications are relatively similar to one another.
+						The average loan amount is around $120,000 and most applications do not deviate
+						far from that node.  Further, most applications are for 30 year mortgages.
+						<br />
+						<br />
+						A 30 year window gives lenders the confidence that applicants will be able to repay the
+						principal with interest. It also allows applicants to maximize present purchasing power
+						by leveraging future earnings.
+					</p>
         </div>
         <div class="col-sm-12 col-md-6">
           <img src="static/images/LA_Amount.png" alt="">
