made 30 year mortgage default

--- a/loan_app/templates/index.html
+++ b/loan_app/templates/index.html
@@ -130,7 +130,7 @@
                     <option value="180"> 15 Year </option>
                     <option value="240"> 20 Year </option>
                     <option value="300"> 25 Year </option>
-                    <option value="360"> 30 Year </option>
+                    <option value="360" selected="selected"> 30 Year </option>
                     <option value="480"> 40 Year </option>
 	                </select>
 	              </div>
