--- a/loan_app/templates/index.html
+++ b/loan_app/templates/index.html
@@ -191,7 +191,7 @@
             According to the graph on the left, more loans are submitted for semiurban properties than urban or rural.
 						However, semiurban loan applications are denied at a lower rate than
 						the other two categories.  This relationship is likely due to the fact
-						that individuals living in the suburbs are trypically older and more
+						that individuals living in the suburbs are typically older and more
 						likely to have established careers and/or spouses with a second income.
 					</p>
         </div>
@@ -221,7 +221,7 @@
 		<div class="row section topspace">
 			<div class="panel panel-cta"><div class="panel-body">
 				<div class="col-lg-8">
-					<p> An full analysis of the training data was performed using Tableau. <br />
+					<p> A full analysis of the training data was performed using Tableau. <br />
 						Click the button on the right for an interactive look at these charts and more! </p>
 				</div>
 				<div class="col-lg-4 text-right">
