added refresh button to form

--- a/loan_app/static/css/basic_style.css
+++ b/loan_app/static/css/basic_style.css
@@ -1,7 +1,7 @@
 
-#submit-col {
+.mortgage-submit-refresh {
   padding-top: 35px;
-  padding-left: 50px;
+  padding-left: 30px;
 }
 
 #model-classificaion-text {
