--- a/loan_app/templates/index.html
+++ b/loan_app/templates/index.html
@@ -154,10 +154,11 @@
 	                </select>
 	              </div>
 							</div>
-							<div class="column col-sm-12 col-md-2">
+							<div class="column col-sm-12 col-md-4 mortgage-submit-refresh" id="submit-col">
+								<button type="button" id="mortgage-submit" class="btn btn-primary"><b>Submit Loan Application</b></button>
 							</div>
-							<div class="column col-sm-12 col-md-6" id="submit-col">
-	              <button type="button" id="mortgage-submit" class="btn btn-primary"><b>Submit Loan Application</b></button>
+							<div class="column col-sm-12 col-md-4 mortgage-submit-refresh" id="refresh-col">
+	              <button type="button" id="mortgage-refresh" class="btn btn-primary"><b>Refresh Application Form</b></button>
 	            </div>
 						</div>
 	        </form>
