--- a/loan_app/templates/index.html
+++ b/loan_app/templates/index.html
@@ -170,7 +170,7 @@
             <img class="img-circle" id="model-classificaion-img" src="static/images/submit.png" alt="" width="125px">
           </div>
           <div class="column col-sm-12 col-md-6">
-            <h4 id="model-classificaion-text"> Use the form appove to submit your data </h4>
+            <h4 id="model-classificaion-text"> Use the form above to submit your data </h4>
           </div>
           <div class="column col-sm-12 col-md-2">
           </div>
