--- a/loan_app/templates/index.html
+++ b/loan_app/templates/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<title>Mortgage Masters</title>
 
 	<link rel="shortcut icon" href="static/images/loan_icon.jpg">
 
